# django-playground

./: .gitignore  README.md  django-playground.code-workspace
books/: Dockerfile  Pipfile
books/accounts/: admin.py  tests.py
books/accounts/migrations/: 0001_initial.py
books/config/: settings.py  urls.py
books/pages/: tests.py  views.py
books/templates/: _base.html  about.html  home.html
custom-user/: README.md  docker-compose.yml
custom-user/app/: .dockerignore  .env.dev  Dockerfile  entrypoint.sh  pyproject.toml
custom-user/app/account/: admin.py  forms.py  manager.py  models.py
custom-user/app/account/migrations/: 0001_initial.py
custom-user/app/custom_user/: asgi.py  settings.py  wsgi.py
tdd-django/: README.md
tdd-django/app/: .dockerignore  .env.dev  Dockerfile.prod  requirements.txt
tdd-django/app/drf_project/: asgi.py  settings.py  urls.py  wsgi.py
tdd-django/app/movies/: admin.py  models.py  views.py
tdd-django/app/movies/migrations/: 0001_initial.py  0002_movie.py
tdd-django/app/tests/movies/: test_serializers.py  test_views.py
